--- a/ElevenNote.WebMVC/Views/Home/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Home/Index.cshtml
@@ -3,24 +3,22 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Eleven Note</h1>
+    <h3>by Tyler Stambaugh</h3>
+    <p class="lead">An example n-tier, MVC web application for creating and retrieving notes..</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Notes</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Suspendisse in est ante in nibh mauris cursus mattis. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui. Morbi non arcu risus quis varius quam quisque.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p>Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Habitant morbi tristique senectus et netus. Sed enim ut sem viverra. Quisque id diam vel quam elementum pulvinar etiam.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
