--- a/ElevenNote.WebMVC/Views/Note/Create.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Create.cshtml
@@ -31,11 +31,18 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">               
+                @Html.DropDownListFor(model => model.CategoryId, ViewData["Categories"] as IEnumerable<SelectListItem>, null, new { @class = "form-control" })
             </div>
         </div>
-    </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
 }
 
 <div>
