--- a/ElevenNote.WebMVC/Views/Note/Details.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Details.cshtml
@@ -35,11 +35,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CategoryName)
+            @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoryName)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
 
         <dt>
