--- a/ElevenNote.WebMVC/Views/Note/Create.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Create.cshtml
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">               
                 @Html.DropDownListFor(model => model.CategoryId, ViewData["Categories"] as IEnumerable<SelectListItem>, null, new { @class = "form-control" })
             </div>
